erDiagram
    Project ||--o{ Spreadsheet : has
    CustomUser ||--o{ Spreadsheet : owns
    Spreadsheet ||--o{ Sheet : contains
    Sheet ||--o{ SheetRow : has
    Sheet ||--o{ SheetColumn : has
    Sheet ||--o{ Cell : contains
    SheetRow ||--o{ Cell : has
    SheetColumn ||--o{ Cell : has

    %% Note: CustomUser and Project are defined in core.models
    %% They use created_at, updated_at, and is_deleted (boolean) for soft-delete
    %% Shown here minimally for relationship clarity

    Project {
        int id PK
    }

    CustomUser {
        int id PK
    }

    Spreadsheet { 
        int id PK
        int project_id FK
        int owner_id FK
        string name
        datetime created_at
        datetime updated_at
        boolean is_deleted
        unique(project_id, name) "unique spreadsheet name per project_id WHERE is_deleted = false"
    }

    Sheet {
        int id PK
        int spreadsheet_id FK
        string name
        int position
        datetime created_at
        datetime updated_at
        boolean is_deleted
        unique(spreadsheet_id, name) "unique sheet name per spreadsheet WHERE is_deleted = false"
        unique(spreadsheet_id, position) "unique sheet position per spreadsheet WHERE is_deleted = false"
    }

    SheetRow {
        int id PK
        int sheet_id FK
        int position
        datetime created_at
        datetime updated_at
        boolean is_deleted
        unique(sheet_id, position) "unique row position per sheet WHERE is_deleted = false"
    }

    SheetColumn {
        int id PK
        int sheet_id FK
        string name
        int position
        datetime created_at
        datetime updated_at
        boolean is_deleted
        unique(sheet_id, position) "unique column position per sheet WHERE is_deleted = false"
    }

    Cell {
        int id PK
        int sheet_id FK
        int row_id FK
        int column_id FK
        enum value_type "empty|string|number|boolean|formula"
        text string_value "nullable, used when value_type='string'. Text starting with '=' stored with ' prefix for round-trip editing."
        decimal number_value "nullable, used when value_type='number'"
        boolean boolean_value "nullable, used when value_type='boolean'"
        text formula_value "nullable, used when value_type='formula' (must start with '=')"
        datetime created_at
        datetime updated_at
        boolean is_deleted
        unique(sheet_id, row_id, column_id) "unique cell position per sheet WHERE is_deleted = false"
        check "sheet_id must match row.sheet_id (enforced via application/trigger)"
        check "sheet_id must match column.sheet_id (enforced via application/trigger)"
    }

